FONTSOURCES = \
	TlwgMono.sfd \
	TlwgMono-Bold.sfd \
	TlwgMono-Oblique.sfd \
	TlwgMono-BoldOblique.sfd \
	TlwgTypewriter.sfd \
	TlwgTypewriter-Bold.sfd \
	TlwgTypewriter-Oblique.sfd \
	TlwgTypewriter-BoldOblique.sfd \
	TlwgTypist.sfd \
	TlwgTypist-Bold.sfd \
	TlwgTypist-Oblique.sfd \
	TlwgTypist-BoldOblique.sfd \
	TlwgTypo.sfd \
	TlwgTypo-Bold.sfd \
	TlwgTypo-Oblique.sfd \
	TlwgTypo-BoldOblique.sfd \
	Purisa.sfd \
	Purisa-Bold.sfd \
	Purisa-Oblique.sfd \
	Purisa-BoldOblique.sfd \
	Sawasdee-BoldOblique.sfd \
	Sawasdee-Bold.sfd \
	Sawasdee-Oblique.sfd \
	Sawasdee.sfd \
	Waree-BoldOblique.sfd \
	Waree-Bold.sfd \
	Waree-Oblique.sfd \
	Waree.sfd \
	Umpush-BoldOblique.sfd \
	Umpush-Bold.sfd \
	Umpush-LightOblique.sfd \
	Umpush-Light.sfd \
	Umpush-Oblique.sfd \
	Umpush.sfd

EXTRA_DIST = $(FONTSOURCES) CREDITS

include $(top_srcdir)/scripts/gen.mk.am

if INCLUDE_LATEX

ttype.afm:       TlwgTypewriter.afm
	$(LN_S) $< $@
ttype_b.afm:     TlwgTypewriter-Bold.afm
	$(LN_S) $< $@
ttype_o.afm:     TlwgTypewriter-Oblique.afm
	$(LN_S) $< $@
ttype_bo.afm:    TlwgTypewriter-BoldOblique.afm
	$(LN_S) $< $@
ttypist.afm:     TlwgTypist.afm
	$(LN_S) $< $@
ttypist_b.afm:   TlwgTypist-Bold.afm
	$(LN_S) $< $@
ttypist_o.afm:   TlwgTypist-Oblique.afm
	$(LN_S) $< $@
ttypist_bo.afm:  TlwgTypist-BoldOblique.afm
	$(LN_S) $< $@
purisa.afm:      Purisa.afm
	$(LN_S) $< $@
purisa_b.afm:    Purisa-Bold.afm
	$(LN_S) $< $@
purisa_o.afm:    Purisa-Oblique.afm
	$(LN_S) $< $@
purisa_bo.afm:   Purisa-BoldOblique.afm
	$(LN_S) $< $@
waree.afm:       Waree.afm
	$(LN_S) $< $@
waree_b.afm:     Waree-Bold.afm
	$(LN_S) $< $@
waree_o.afm:     Waree-Oblique.afm
	$(LN_S) $< $@
waree_bo.afm:    Waree-BoldOblique.afm
	$(LN_S) $< $@
umpush.afm:      Umpush.afm
	$(LN_S) $< $@
umpush_b.afm:    Umpush-Bold.afm
	$(LN_S) $< $@
umpush_o.afm:    Umpush-Oblique.afm
	$(LN_S) $< $@
umpush_bo.afm:   Umpush-BoldOblique.afm
	$(LN_S) $< $@
sawasdee.afm:    Sawasdee.afm
	$(LN_S) $< $@
sawasdee_b.afm:  Sawasdee-Bold.afm
	$(LN_S) $< $@
sawasdee_o.afm:  Sawasdee-Oblique.afm
	$(LN_S) $< $@
sawasdee_bo.afm: Sawasdee-BoldOblique.afm
	$(LN_S) $< $@
ttype.pfb:       TlwgTypewriter.pfb
	$(LN_S) $< $@
ttype_b.pfb:     TlwgTypewriter-Bold.pfb
	$(LN_S) $< $@
ttype_o.pfb:     TlwgTypewriter-Oblique.pfb
	$(LN_S) $< $@
ttype_bo.pfb:    TlwgTypewriter-BoldOblique.pfb
	$(LN_S) $< $@
ttypist.pfb:     TlwgTypist.pfb
	$(LN_S) $< $@
ttypist_b.pfb:   TlwgTypist-Bold.pfb
	$(LN_S) $< $@
ttypist_o.pfb:   TlwgTypist-Oblique.pfb
	$(LN_S) $< $@
ttypist_bo.pfb:  TlwgTypist-BoldOblique.pfb
	$(LN_S) $< $@
purisa.pfb:      Purisa.pfb
	$(LN_S) $< $@
purisa_b.pfb:    Purisa-Bold.pfb
	$(LN_S) $< $@
purisa_o.pfb:    Purisa-Oblique.pfb
	$(LN_S) $< $@
purisa_bo.pfb:   Purisa-BoldOblique.pfb
	$(LN_S) $< $@
waree.pfb:       Waree.pfb
	$(LN_S) $< $@
waree_b.pfb:     Waree-Bold.pfb
	$(LN_S) $< $@
waree_o.pfb:     Waree-Oblique.pfb
	$(LN_S) $< $@
waree_bo.pfb:    Waree-BoldOblique.pfb
	$(LN_S) $< $@
umpush.pfb:      Umpush.pfb
	$(LN_S) $< $@
umpush_b.pfb:    Umpush-Bold.pfb
	$(LN_S) $< $@
umpush_o.pfb:    Umpush-Oblique.pfb
	$(LN_S) $< $@
umpush_bo.pfb:   Umpush-BoldOblique.pfb
	$(LN_S) $< $@
sawasdee.pfb:    Sawasdee.pfb
	$(LN_S) $< $@
sawasdee_b.pfb:  Sawasdee-Bold.pfb
	$(LN_S) $< $@
sawasdee_o.pfb:  Sawasdee-Oblique.pfb
	$(LN_S) $< $@
sawasdee_bo.pfb: Sawasdee-BoldOblique.pfb
	$(LN_S) $< $@

FONTS = \
	ttype \
	ttype_b \
	ttype_o \
	ttype_bo \
	ttypist \
	ttypist_b \
	ttypist_o \
	ttypist_bo \
	purisa \
	purisa_b \
	purisa_o \
	purisa_bo \
	waree \
	waree_b \
	waree_o \
	waree_bo \
	umpush \
	umpush_b \
	umpush_o \
	umpush_bo \
	sawasdee \
	sawasdee_b \
	sawasdee_o \
	sawasdee_bo

MAP = tlwg.map

include $(top_srcdir)/latex/texfont.mk.am

endif # INCLUDE_LATEX
