FONTSOURCES = \
	TlwgMono.sfd \
	TlwgMono-Bold.sfd \
	TlwgMono-Oblique.sfd \
	TlwgMono-BoldOblique.sfd \
	TlwgTypewriter.sfd \
	TlwgTypewriter-Bold.sfd \
	TlwgTypewriter-Oblique.sfd \
	TlwgTypewriter-BoldOblique.sfd \
	TlwgTypist.sfd \
	TlwgTypist-Bold.sfd \
	TlwgTypist-Oblique.sfd \
	TlwgTypist-BoldOblique.sfd \
	TlwgTypo.sfd \
	TlwgTypo-Bold.sfd \
	TlwgTypo-Oblique.sfd \
	TlwgTypo-BoldOblique.sfd \
	Purisa.sfd \
	Purisa-Bold.sfd \
	Purisa-Oblique.sfd \
	Purisa-BoldOblique.sfd \
	Sawasdee-BoldOblique.sfd \
	Sawasdee-Bold.sfd \
	Sawasdee-Oblique.sfd \
	Sawasdee.sfd \
	Waree-BoldOblique.sfd \
	Waree-Bold.sfd \
	Waree-Oblique.sfd \
	Waree.sfd \
	Umpush-BoldOblique.sfd \
	Umpush-Bold.sfd \
	Umpush-LightOblique.sfd \
	Umpush-Light.sfd \
	Umpush-Oblique.sfd \
	Umpush.sfd

EXTRA_DIST = $(FONTSOURCES) CREDITS README.tlwgmono

include $(top_srcdir)/scripts/gen.mk.am

if INCLUDE_LATEX

ttype.afm:       TlwgTypewriter.afm
	[ -e $@ ] || $(LN_S) $< $@
ttype_b.afm:     TlwgTypewriter-Bold.afm
	[ -e $@ ] || $(LN_S) $< $@
ttype_o.afm:     TlwgTypewriter-Oblique.afm
	[ -e $@ ] || $(LN_S) $< $@
ttype_bo.afm:    TlwgTypewriter-BoldOblique.afm
	[ -e $@ ] || $(LN_S) $< $@
ttypist.afm:     TlwgTypist.afm
	[ -e $@ ] || $(LN_S) $< $@
ttypist_b.afm:   TlwgTypist-Bold.afm
	[ -e $@ ] || $(LN_S) $< $@
ttypist_o.afm:   TlwgTypist-Oblique.afm
	[ -e $@ ] || $(LN_S) $< $@
ttypist_bo.afm:  TlwgTypist-BoldOblique.afm
	[ -e $@ ] || $(LN_S) $< $@
purisa.afm:      Purisa.afm
	[ -e $@ ] || $(LN_S) $< $@
purisa_b.afm:    Purisa-Bold.afm
	[ -e $@ ] || $(LN_S) $< $@
purisa_o.afm:    Purisa-Oblique.afm
	[ -e $@ ] || $(LN_S) $< $@
purisa_bo.afm:   Purisa-BoldOblique.afm
	[ -e $@ ] || $(LN_S) $< $@
waree.afm:       Waree.afm
	[ -e $@ ] || $(LN_S) $< $@
waree_b.afm:     Waree-Bold.afm
	[ -e $@ ] || $(LN_S) $< $@
waree_o.afm:     Waree-Oblique.afm
	[ -e $@ ] || $(LN_S) $< $@
waree_bo.afm:    Waree-BoldOblique.afm
	[ -e $@ ] || $(LN_S) $< $@
umpush.afm:      Umpush.afm
	[ -e $@ ] || $(LN_S) $< $@
umpush_b.afm:    Umpush-Bold.afm
	[ -e $@ ] || $(LN_S) $< $@
umpush_l.afm:    Umpush-Light.afm
	[ -e $@ ] || $(LN_S) $< $@
umpush_o.afm:    Umpush-Oblique.afm
	[ -e $@ ] || $(LN_S) $< $@
umpush_bo.afm:   Umpush-BoldOblique.afm
	[ -e $@ ] || $(LN_S) $< $@
umpush_lo.afm:   Umpush-LightOblique.afm
	[ -e $@ ] || $(LN_S) $< $@
sawasdee.afm:    Sawasdee.afm
	[ -e $@ ] || $(LN_S) $< $@
sawasdee_b.afm:  Sawasdee-Bold.afm
	[ -e $@ ] || $(LN_S) $< $@
sawasdee_o.afm:  Sawasdee-Oblique.afm
	[ -e $@ ] || $(LN_S) $< $@
sawasdee_bo.afm: Sawasdee-BoldOblique.afm
	[ -e $@ ] || $(LN_S) $< $@
ttype.pfb:       TlwgTypewriter.pfb
	[ -e $@ ] || $(LN_S) $< $@
ttype_b.pfb:     TlwgTypewriter-Bold.pfb
	[ -e $@ ] || $(LN_S) $< $@
ttype_o.pfb:     TlwgTypewriter-Oblique.pfb
	[ -e $@ ] || $(LN_S) $< $@
ttype_bo.pfb:    TlwgTypewriter-BoldOblique.pfb
	[ -e $@ ] || $(LN_S) $< $@
ttypist.pfb:     TlwgTypist.pfb
	[ -e $@ ] || $(LN_S) $< $@
ttypist_b.pfb:   TlwgTypist-Bold.pfb
	[ -e $@ ] || $(LN_S) $< $@
ttypist_o.pfb:   TlwgTypist-Oblique.pfb
	[ -e $@ ] || $(LN_S) $< $@
ttypist_bo.pfb:  TlwgTypist-BoldOblique.pfb
	[ -e $@ ] || $(LN_S) $< $@
purisa.pfb:      Purisa.pfb
	[ -e $@ ] || $(LN_S) $< $@
purisa_b.pfb:    Purisa-Bold.pfb
	[ -e $@ ] || $(LN_S) $< $@
purisa_o.pfb:    Purisa-Oblique.pfb
	[ -e $@ ] || $(LN_S) $< $@
purisa_bo.pfb:   Purisa-BoldOblique.pfb
	[ -e $@ ] || $(LN_S) $< $@
waree.pfb:       Waree.pfb
	[ -e $@ ] || $(LN_S) $< $@
waree_b.pfb:     Waree-Bold.pfb
	[ -e $@ ] || $(LN_S) $< $@
waree_o.pfb:     Waree-Oblique.pfb
	[ -e $@ ] || $(LN_S) $< $@
waree_bo.pfb:    Waree-BoldOblique.pfb
	[ -e $@ ] || $(LN_S) $< $@
umpush.pfb:      Umpush.pfb
	[ -e $@ ] || $(LN_S) $< $@
umpush_b.pfb:    Umpush-Bold.pfb
	[ -e $@ ] || $(LN_S) $< $@
umpush_l.pfb:    Umpush-Light.pfb
	[ -e $@ ] || $(LN_S) $< $@
umpush_o.pfb:    Umpush-Oblique.pfb
	[ -e $@ ] || $(LN_S) $< $@
umpush_bo.pfb:   Umpush-BoldOblique.pfb
	[ -e $@ ] || $(LN_S) $< $@
umpush_lo.pfb:   Umpush-LightOblique.pfb
	[ -e $@ ] || $(LN_S) $< $@
sawasdee.pfb:    Sawasdee.pfb
	[ -e $@ ] || $(LN_S) $< $@
sawasdee_b.pfb:  Sawasdee-Bold.pfb
	[ -e $@ ] || $(LN_S) $< $@
sawasdee_o.pfb:  Sawasdee-Oblique.pfb
	[ -e $@ ] || $(LN_S) $< $@
sawasdee_bo.pfb: Sawasdee-BoldOblique.pfb
	[ -e $@ ] || $(LN_S) $< $@

FONTS = \
	ttype \
	ttype_b \
	ttype_o \
	ttype_bo \
	ttypist \
	ttypist_b \
	ttypist_o \
	ttypist_bo \
	purisa \
	purisa_b \
	purisa_o \
	purisa_bo \
	waree \
	waree_b \
	waree_o \
	waree_bo \
	umpush \
	umpush_b \
	umpush_l \
	umpush_o \
	umpush_bo \
	umpush_lo \
	sawasdee \
	sawasdee_b \
	sawasdee_o \
	sawasdee_bo

MAP = tlwg.map

include $(top_srcdir)/latex/texfont.mk.am

endif # INCLUDE_LATEX
