FD_FILES = \
	lthkinnari.fd lthgaruda.fd lthnorasi.fd \
	lthttype.fd lthttypist.fd \
	lthpurisa.fd lthloma.fd \
	lthwaree.fd lthumpush.fd \
	lthsawasdee.fd

EXTRA_DIST = \
	texfont.mk.am \
	lthuni.enc \
	thailigs.vpl \
	$(FD_FILES)

babeldir = $(texmfdir)/tex/generic/babel
babel_DATA = $(FD_FILES)

