FONTSOURCES = \
	DBThaiTextBoldItalic.sfd \
	DBThaiTextBold.sfd \
	DBThaiTextItalic.sfd \
	DBThaiText.sfd

FONTFILES = \
	DBThaiTextBoldItalic.ttf \
	DBThaiTextBold.ttf \
	DBThaiTextItalic.ttf \
	DBThaiText.ttf

MAINTAINERCLEANFILES = Makefile.in
DISTCLEANFILES = *.ttf *.g2n

EXTRA_DIST = $(FONTSOURCES)

font_DATA = $(FONTFILES)

include @top_builddir@/scripts/gen.mk

