FONTSOURCES = \
	TlwgMono.sfd \
	TlwgMono-Bold.sfd \
	TlwgMono-Oblique.sfd \
	TlwgMono-BoldOblique.sfd \
	TlwgTypewriter.sfd \
	TlwgTypewriter-Bold.sfd \
	TlwgTypewriter-Oblique.sfd \
	TlwgTypewriter-BoldOblique.sfd \
	TlwgTypist.sfd \
	TlwgTypist-Bold.sfd \
	TlwgTypist-Oblique.sfd \
	TlwgTypist-BoldOblique.sfd \
	TlwgTypo.sfd \
	TlwgTypo-Bold.sfd \
	TlwgTypo-Oblique.sfd \
	TlwgTypo-BoldOblique.sfd \
	Purisa.sfd \
	Purisa-Bold.sfd \
	Purisa-Oblique.sfd \
	Purisa-BoldOblique.sfd \
	Sawasdee-BoldOblique.sfd \
	Sawasdee-Bold.sfd \
	Sawasdee-Oblique.sfd \
	Sawasdee.sfd \
	Waree-BoldOblique.sfd \
	Waree-Bold.sfd \
	Waree-Oblique.sfd \
	Waree.sfd \
	Umpush-BoldOblique.sfd \
	Umpush-Bold.sfd \
	Umpush-LightOblique.sfd \
	Umpush-Light.sfd \
	Umpush-Oblique.sfd \
	Umpush.sfd

EXTRA_DIST = $(FONTSOURCES) CREDITS

include $(top_srcdir)/scripts/gen.mk.am
